# RapidCanvas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  TRANSLATION_LOG.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/agent/: __init__.py  adaptive_retrieval.py  dev_adapter.py  dspy_base.py  dspy_parsing.py  dspy_runner.py  eval_support.py  evidence_contract.py  finalize.py  judge_signatures.py  loader.py  log_mlflow.py  mlflow_wrapper.py  program.py  providers.py  quality_trace.py  query_planning.py  response.py  runner.py  service.py  signatures.py  sources.py  untrusted.py
backend/app/api/: rate_limit.py  request_context.py  routes.py
backend/app/clients/: __init__.py  bsky.py  bsky_embeds.py  bsky_normalize.py  bsky_url.py  extraction.py  fetcher.py  robots.py  search.py  search_collect.py  search_support.py
backend/app/eval/: __init__.py  agents.py  dataset.py  gepa_dataset.py  gepa_metric.py  gepa_persistence.py  gepa_source_quality.py  gepa_validation.py  image_metrics.py  judge.py  judge_runtime.py  metrics.py  optimize.py  point_recall.py  provider_comparison.py  provider_quality.py  quality_metrics.py  quality_policy.py  report.py  runner.py  source_screening.py
backend/app/guardrails/: __init__.py  citation_support.py  fallback_bullets.py  identifiers.py  output.py  policies.py  prompt_injection.py  trust.py
backend/app/ml/: __init__.py  boundary.py  c2_policy.py  diagnostics.py  embeddings.py  image.py  rag_boundary.py  rag_runtime.py  (+13 more)
(+247 files in other folders)
